:sparkles: :: 오늘 모은 네잎클로버 count하기

--- a/src/components/ToDoTemplate.scss
+++ b/src/components/ToDoTemplate.scss
@@ -14,3 +14,13 @@
   align-items: center;
   justify-content: center;
 }
+
+.checked-count {
+  color: white;
+  height: 2rem;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
